RESOLVED FIXED229639
@font-face rules accessed over file: urls to a file which does not exist are not visible to document.fonts
https://bugs.webkit.org/show_bug.cgi?id=229639
Summary @font-face rules accessed over file: urls to a file which does not exist are ...
Myles C. Maxfield
Reported 2021-08-27 22:07:59 PDT
@font-face blocks accessed over file: urls to a file which does not exist are not visible to document.fonts
Attachments
Patch (3.91 KB, patch)
2021-08-27 22:10 PDT, Myles C. Maxfield
no flags
Patch (3.84 KB, patch)
2021-08-31 02:50 PDT, Myles C. Maxfield
no flags
Patch (5.67 KB, patch)
2021-09-01 02:59 PDT, Myles C. Maxfield
zalan: review+
Myles C. Maxfield
Comment 1 2021-08-27 22:10:34 PDT
Simon Fraser (smfr)
Comment 2 2021-08-30 15:59:08 PDT
Comment on attachment 436704 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=436704&action=review I don't know enough about whether pages should access local files to review this. > Source/WebCore/ChangeLog:3 > + @font-face blocks accessed over file: urls to a file which does not exist are not visible to document.fonts Can you rename this from "blocks" to "rules"? > LayoutTests/fast/text/font-file-failed.html:7 > + src: url("ThisIsNotARealFile.otf") format("opentype"); Should this be an explicit file: url so the test works if run from http?
Myles C. Maxfield
Comment 3 2021-08-31 02:50:11 PDT
Myles C. Maxfield
Comment 4 2021-09-01 02:59:41 PDT
Myles C. Maxfield
Comment 5 2021-09-03 13:18:47 PDT
Radar WebKit Bug Importer
Comment 6 2021-09-03 13:19:14 PDT
Note You need to log in before you can comment on or make changes to this bug.